--- a/2-CourseExamples/EX3-HR/hr/hr/Views/Shared/_Layout.cshtml
+++ b/2-CourseExamples/EX3-HR/hr/hr/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - DotNetCore</title>
+    <title>@ViewData["Title"] - hr</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,18 +26,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">DotNetCore</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">hr</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-
-                    <li><a asp-area="" asp-controller="Categories" asp-action="Index">Categories</a></li>
-                    <li><a asp-area="" asp-controller="Posts" asp-action="Index">Post</a></li>
+                    <li><a asp-area="" asp-controller="Depts" asp-action="Index">Dept</a></li>
+                    <li><a asp-area="" asp-controller="Emps" asp-action="Index">Emp</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-         
-                     
                 </ul>
             </div>
         </div>
@@ -46,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - DotNetCore</p>
+            <p>&copy; 2019 - hr</p>
         </footer>
     </div>
 
